--- a/views/purchase_order_view.xml
+++ b/views/purchase_order_view.xml
@@ -6,8 +6,8 @@
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="discount" groups="base.group_no_one" optional="show"/>
-                <field name="fixed_discount" groups="base.group_no_one" optional="show"/>
+                <field name="discount"  optional="show"/>
+                <field name="fixed_discount"  optional="show"/>
             </xpath>
         </field>
     </record>
